Baldurs Gate 3 (Patch 6) - ribbon-like artifacts on textures
Description
Patch 6 (released yesterday) shows texture artifacts on latest Mesa stable (21.2.3).
Baldurs Gate 3 offers 2 renderers (VK and DX11): This issue is visible using the Vulkan renderer.
Will add information and test mesa-git
later today.
Screenshots
Steps to reproduce
The artifacts are shown on almost all textures (main menu, character creation, ingame).
System information
System: Host: mershl-desktop Kernel: 5.14.10-300.fc35.x86_64 x86_64 bits: 64 compiler: gcc
v: 2.37-10.fc35 Desktop: GNOME 41.0 tk: GTK 3.24.30 wm: gnome-shell dm: GDM
Distro: Fedora release 35 (Thirty Five)
CPU: Info: 8-Core model: AMD Ryzen 7 3700X bits: 64 type: MT MCP arch: Zen 2 rev: 0 cache:
L2: 4 MiB
flags: avx avx2 lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
bogomips: 115199
Speed: 2193 MHz min/max: 2200/3600 MHz boost: enabled Core speeds (MHz): 1: 2193
2: 3648 3: 2170 4: 2132 5: 2200 6: 2200 7: 2200 8: 2200 9: 2120 10: 2138 11: 2199
12: 2199 13: 2199 14: 2200 15: 2200 16: 3677
Graphics: Device-1: AMD Navi 21 [Radeon RX 6800/6800 XT / 6900 XT] driver: amdgpu v: kernel
bus-ID: 0a:00.0 chip-ID: 1002:73bf
Display: x11 server: X.Org 1.20.11 compositor: gnome-shell driver: loaded: amdgpu,ati
unloaded: fbdev,modesetting,radeon,vesa resolution: 3440x1440~100Hz s-dpi: 96
OpenGL: renderer: AMD Radeon RX 6800 (SIENNA_CICHLID DRM 3.42.0
5.14.10-300.fc35.x86_64 LLVM 13.0.0)
v: 4.6 Mesa 21.2.3 direct render: Yes
If applicable
- Wine/Proton version: 6.3-7
Edited by Mershl